# vaHsu

./: build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
vaHsu/: build.gradle
vaHsu/src/main/: AndroidManifest.xml
vaHsu/src/main/cpp/: CMakeLists.txt
vaHsu/src/main/cpp/libs/ffmpeg/include/libavcodec/: codec_desc.h
vaHsu/src/main/cpp/src/common/: SysTime.h  VaLock.cpp  VaLock.h  VaUtils.cpp
vaHsu/src/main/cpp/src/common/encrypted/: md5.cpp  md5.h
vaHsu/src/main/cpp/src/ffmpegWrapper/: IVaVideoDecoder.h  ffmpegH264DecoderWrapper.cpp  ffmpegH264DecoderWrapper.h  ffmpegWrapper.cpp  ffmpegWrapper.h
vaHsu/src/main/cpp/src/include/: IVaLock.h  IVaLogger.h  IVaUtils.h
vaHsu/src/main/cpp/src/jni/: JniHelper.cpp  JniHelper.h  VaVideoEngine.cpp
vaHsu/src/main/cpp/src/log/: VaLogger.cpp  VaLogger.h
vaHsu/src/main/cpp/src/test/: testDecoder.cpp  testDecoder.h
vaHsu/src/main/cpp/src/thread/: VaXThread.cpp  VaXThread.h
vaHsu/src/main/java/com/vaHsu/: VaHsuApi.java  VaHsuTypes.java
vaHsu/src/main/java/com/vaHsu/base/: IVideoDataConsumer.java  IVideoDataProvider.java  IVideoFrameConsumer.java  IVideoFrameProvider.java  VaVideoFrame.java
vaHsu/src/main/java/com/vaHsu/capture/: CaptureObserver.java  IVideoCapture.java
vaHsu/src/main/java/com/vaHsu/capture/camera/: CameraEnumeration.java  CameraSession.java  CameraVideoCapture.java  VaLocalView.java  VideoCaptureConfig.java
vaHsu/src/main/java/com/vaHsu/capture/camera/camera1/: Camera1Capture.java
vaHsu/src/main/java/com/vaHsu/capture/camera/camera2/: Camera2Capture.java
vaHsu/src/main/java/com/vaHsu/decoder/: IVideoDecoder.java
vaHsu/src/main/java/com/vaHsu/decoder/ffmpeg/: FFmpegDecoder.java
vaHsu/src/main/java/com/vaHsu/encoder/: IVideoEncoder.java  VideoCodecType.java  VideoEncoderConfig.java  VideoEncoderFactory.java
vaHsu/src/main/java/com/vaHsu/encoder/hard/: AvcHardEncoder.java
vaHsu/src/main/java/com/vaHsu/log/: IVaHsuLog.java  VaHsuLog.java
vaHsu/src/main/java/com/vaHsu/render/: SurfaceTextureHelper.java
vaHsu/src/main/java/com/vaHsu/utils/: NV21Buffer.java
